--- a/CORONA-landing/css/styles.css
+++ b/CORONA-landing/css/styles.css
@@ -54,7 +54,7 @@ a {
   height: 100vh;
 }
 .hero__left {
-  background: url("../beerg.jpg");
+  background: url("../images/beerbg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
