--- a/Interior-landing/styles.css
+++ b/Interior-landing/styles.css
@@ -18,9 +18,12 @@
     align-items: center;
     justify-content: space-between;
 }
-.logo{
+.navbar__logo{
     width: 120px;
     cursor: pointer;
+    font-weight: 900;
+    font-size: 24px;
+    color: #fff;
 }
 .navbar ul li{
     list-style-type: none;
