--- a/Loruki/styles.css
+++ b/Loruki/styles.css
@@ -15,6 +15,7 @@ body{
     font-family: 'Lato',sans-serif;
     color: #333;
     line-height: 1.6;
+    overflow-x: hidden;
 }
 
 ul{
@@ -82,6 +83,9 @@ img{
     gap: 30px;
     overflow: visible;
 }
+.showcase-text{
+    animation: slideInFromLeft 1s  ease-in   ;
+}
 .showcase-form{
     position: relative;
     top: 60px;/*Push the form 60px top*/
@@ -90,6 +94,7 @@ img{
     padding: 40px;
     justify-self: flex-end;
     z-index: 100;
+    animation: slideInFromRight 1s ease-in;
 }
 .showcase-form .form-control{
     margin: 30px 0;
@@ -123,6 +128,7 @@ img{
 /*STATS**/
 .stats{
     padding-top: 100px;
+    animation: slideInFromBottom 1s ease-in;
 }
 .stats-heading{
     max-width: 500px;
@@ -152,4 +158,105 @@ img{
 .cloud .grid{
     grid-template-columns:  4fr 3fr;
     color: #fff;
+}
+
+/*LANGUAGES*/
+.languages .flex{
+    flex-wrap: wrap;
+}
+.languages .card{
+    text-align: center;
+    margin: 18px 10px 40px;
+    cursor: pointer;
+    transition: transform 200ms ease-in;
+}
+.languages .card:hover{
+    transform: translateY(-15px);
+}
+.languages .card h4{ 
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+/* Footer */
+.footer .social a{
+    margin: 0 10px;
+}
+/* Animations*/
+@keyframes slideInFromLeft{
+    0%{
+        transform: translateX(-100%);
+    }
+    100%{
+        transform: translateX(0);
+    }
+}
+@keyframes slideInFromRight{
+    0%{
+        transform: translateX(100%);
+    }
+    100%{
+        transform: translateX(0);
+    }
+}
+@keyframes slideInFromTop{
+    0%{
+        transform: translateY(-100%);
+    }
+    100%{
+        transform: translateX(0);
+    }
+}
+@keyframes slideInFromBottom{
+    0%{
+        transform: translateY(100%);
+    }
+    100%{
+        transform: translateX(0);
+    }
+}
+
+
+/* TABLETS AND UNDER*/
+@media screen and (max-width : 768px){
+    .grid,
+    .showcase .grid,
+    .stats .grid,
+    .cli .grid,
+    .cloud .grid{
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+    }
+    .showcase{
+        height: auto;
+    }
+    .showcase-text{
+        text-align: center;
+        margin-top: 40px;
+        animation: slideInFromTop 1s ease-in;
+    }
+    .showcase-form{
+        justify-self: center;
+        margin: auto;
+        animation: slideInFromBottom 1s ease-in;
+    }
+    .cli .grid > *:first-child{
+        grid-column: 1;
+        grid-row: 1;
+    }
+}
+
+
+/*Mobile*/
+@media screen and (max-width : 500px){
+    .navbar{
+        height: 110px;
+    }
+    .navbar .flex{
+        flex-direction: column;
+    }
+    .navbar ul {
+        padding: 10px;
+        background: rgba(0,0,0,0.1);
+    }
 }
