--- a/Loruki/utils.css
+++ b/Loruki/utils.css
@@ -7,6 +7,22 @@
 .text-center{
     text-align: center;
 }
+/* Text Sizes */
+.lead{
+    font-size: 20px;
+}
+.sm{
+    font-size: 1rem;
+}
+.md{
+    font-size: 2rem;
+}
+.lg{
+    font-size: 3rem;
+}
+.xl{
+    font-size: 4rem;
+}
 
 .flex{
     display: flex;
@@ -55,15 +71,25 @@
 /*Backgrounds & colored buttons*/
 .bg-primary, .btn-primary{
     background-color: var(--primary-color);
+    color: #fff;
 }
 .bg-secondary, .btn-secondary{
     background-color: var(--secondary-color);
+    color: #fff;
 }
 .bg-dark, .btn-dark{
     background-color: var(--dark-color);
+    color: #fff;
 }
 .bg-light, .btn-light{
     background-color: var(--light-color);
+    color: #fff;
+}
+.bg-primary a, .btn-primary a,
+.bg-secondary a, .btn-secondary a,
+.bg-dark a, .btn-dark a,
+.bg-light a, .btn-light a{
+    color: #fff;
 }
 
 /*MARGIN*/
